--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,10 @@ section {
     color: rgba(85, 85, 85, 1);
 }
 
+.nav-item {
+    padding-left: 10%;
+}
+
 .navbar-nav li:hover>.dropdown-menu {
     display: block;
 
