--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ html,
 body {
     background-color: white;
     scroll-behavior: smooth;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .parallax {
