--- a/css/contact.css
+++ b/css/contact.css
@@ -4,11 +4,11 @@
     border-left: none !important;
     border-right: none !important;
     border-radius: 0px !important;
-    font-size: 18px !important;
+    font-size: 100% !important;
 }
 
 .card-header {
-    font-size: 20px;
+    font-size: 1.05em;
 }
 
 textarea {
